--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "css-loader": "^0.25.0",
     "eslint": "^4.3.0",
     "eslint-config-standard": "^10.2.1",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
