--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   "dependencies": {
     "axios": "^0.16.2",
     "bootstrap": "^3.3.7",
-    "copy-webpack-plugin": "^4.0.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
+    "js-cookie": "^2.1.4",
     "lodash": "^4.17.4",
     "loglevel": "^1.4.1",
     "moment": "^2.18.1",
@@ -32,7 +32,7 @@
     "vue-router": "^2.7.0",
     "vue-select": "github:sagalbot/vue-select",
     "vuex": "^2.3.1",
-    "webpack-dev-server": "^2.6.0"
+    "vuex-persistedstate": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
@@ -40,6 +40,7 @@
     "babel-loader": "^6.0.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-2": "^6.24.1",
+    "copy-webpack-plugin": "^4.0.1",
     "cross-env": "^3.2.4",
     "css-loader": "^0.25.0",
     "eslint": "^4.3.0",
@@ -59,6 +60,7 @@
     "vue-img-inputer": "^1.1.0",
     "vue-loader": "^12.2.2",
     "vue-template-compiler": "^2.4.2",
-    "webpack": "^2.7.0"
+    "webpack": "^2.7.0",
+    "webpack-dev-server": "^2.6.0"
   }
 }
