--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "GeminiWind <gemini.wind285@gmail.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "dev": "cross-env NODE_ENV=development webpack-dashboard -- webpack-dev-server --open --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
@@ -61,6 +61,7 @@
     "vue-loader": "^12.2.2",
     "vue-template-compiler": "^2.4.2",
     "webpack": "^2.7.0",
+    "webpack-dashboard": "^1.0.0",
     "webpack-dev-server": "^2.6.0"
   }
 }
