Add deploy and change import syntax

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,24 @@
-dist: trusty
-sudo: false
 language: node_js
-node_js:
-- node
-cache:
-  directories:
-  - node_modules
+node_js: '8'
+cache: yarn
+before_install:
+  - sudo apt-get install awscli -y
+  - curl -sLo /tmp/terraform.zip https://releases.hashicorp.com/terraform/0.12.3/terraform_0.12.3_linux_amd64.zip
+  - unzip /tmp/terraform.zip -d /tmp
+  - mv /tmp/terraform ~/bin
+  - export PATH="~/bin:$PATH"
 install:
-- npm install
+- yarn
 jobs:
   include:
     - stage: lint
       script: npm run lint
-notifications:
-  email:
-  - gemini.wind285@gmail.com
+    - stage: build
+      script: chmod +x ./scripts/build && ./scripts/build
+    - stage: deploy
+      deploy:
+      - provider: script
+        skip_cleanup: true
+        script: chmod +x ./scripts/deploy && ./scripts/deploy
+        on:
+          branch: release
