--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "chatroom",
-  "description": "Chatroom build by Node JS,Vue,Mongo and Socket",
+  "description": "Chatroom Website build by using VueJs",
   "version": "1.0.0",
   "author": "GeminiWind <gemini.wind285@gmail.com>",
-  "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dashboard -- webpack-dev-server --open --hot --config config/webpack/dev.config.js",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules --config config/webpack/prod.config.js",
+    "start": "./node_modules/.bin/env-cmd webpack-dashboard -- webpack-dev-server --open --hot --config config/webpack/dev.config.js",
+    "build": "./node_modules/.bin/env-cmd -f ./.env.production webpack --progress --hide-modules --config config/webpack/prod.config.js",
     "precommit": "npm run lint",
     "lint": "eslint --ext .js, .vue --ignore-path .gitignore ."
   },
@@ -30,7 +29,7 @@
     "vue-infinite-loading": "^2.1.3",
     "vue-letter-avatar": "^0.1.4",
     "vue-router": "^2.7.0",
-    "vue-select": "github:sagalbot/vue-select",
+    "vue-select": "^3.1.0",
     "vuex": "^2.3.1",
     "vuex-persistedstate": "^2.0.0"
   },
@@ -42,8 +41,9 @@
     "babel-preset-stage-2": "^6.24.1",
     "co": "^4.6.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.2.4",
+    "cross-env": "^5.2.0",
     "css-loader": "^0.25.0",
+    "env-cmd": "^9.0.3",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-import-resolver-webpack": "^0.8.3",
